06_09/02:01 서버 연동