@@ -21,52 +21,48 @@ public class DebugData {
     }
 
     public void generateDebugData() {
-        Option optRegular = new Option("opt_regular", "Regular", 0);
-        Option optLarge = new Option("opt_large", "Large", 500);
-        Option optAddShot = new Option("opt_add_shot", "샷 추가", 500);
-        Option optVanilla = new Option("opt_vanilla", "바닐라 시럽", 300);
-        Option optHazelnut = new Option("opt_hazelnut", "헤이즐넛 시럽", 300);
+        Option tempHot = new Option("temp_hot", "뜨겁게", 0);
+        Option tempCold = new Option("temp_cold", "차갑게", 500);
+        Option shot1 = new Option("shot_1", "1샷 추가", 500);
+        Option syrupVanilla = new Option("syrup_vanilla", "바닐라 시럽", 300);
+        OptionGroup tempGroup = new OptionGroup("group_temp", "온도", true, List.of(tempHot, tempCold));
+        OptionGroup shotGroup = new OptionGroup("group_shot", "샷", false, List.of(shot1));
+        OptionGroup syrupGroup = new OptionGroup("group_syrup", "시럽", false, List.of(syrupVanilla));
 
-        OptionGroup ogSize = new OptionGroup("og_size", "사이즈", true, List.of(optRegular, optLarge));
-        OptionGroup ogShot = new OptionGroup("og_shot", "샷", false, List.of(optAddShot));
-        OptionGroup ogSyrup = new OptionGroup("og_syrup", "시럽", false, List.of(optVanilla, optHazelnut));
+        Menu americano = new Menu("menu_americano", "아메리카노", 4000, Path.of("images/americano.jpg"), "고소한 원두의 풍미", List.of(tempGroup, shotGroup));
+        Menu latte = new Menu("menu_latte", "카페 라떼", 4500, Path.of("images/latte.jpg"), "부드러운 우유의 조화", List.of(tempGroup, shotGroup, syrupGroup));
 
-        Menu menuAmericano = new Menu("menu_americano", "아메리카노", 4000, Path.of(""), "고소한 원두의 풍미", List.of(ogSize, ogShot));
-        Menu menuLatte = new Menu("menu_latte", "카페 라떼", 4500, Path.of(""), "부드러운 우유와 에스프레소의 조화", List.of(ogSize, ogShot, ogSyrup));
-
-        Category cateCoffee = new Category("cate_coffee", "커피", List.of(menuAmericano, menuLatte));
+        Category coffeeCategory = new Category("cate_coffee", "커피", List.of(americano, latte));
 
         Cart cart1 = new Cart();
-        cart1.addItem(new OrderItem(menuAmericano, Map.of(ogSize, optLarge, ogShot, optAddShot), 1));
-        Order order1 = new Order(101, "아무개", LocalDateTime.now().minusMinutes(10), OrderStatus.ACCEPTED, cart1);
+        cart1.addItem(new OrderItem(americano, Map.of(tempGroup, tempHot), 2));
+        Order order1 = new Order(101, "김민준", LocalDateTime.now().minusMinutes(15), OrderStatus.ACCEPTED, cart1);
 
         Cart cart2 = new Cart();
-        cart2.addItem(new OrderItem(menuLatte, Map.of(ogSize, optRegular, ogSyrup, optVanilla), 1));
-        Order order2 = new Order(102, "아무개", LocalDateTime.now().minusMinutes(5), OrderStatus.PENDING, cart2);
+        cart2.addItem(new OrderItem(latte, Map.of(tempGroup, tempCold, shotGroup, shot1), 1));
+        Order order2 = new Order(102, "이서아", LocalDateTime.now().minusMinutes(7), OrderStatus.PENDING, cart2);
 
         Cart cart3 = new Cart();
-        cart3.addItem(new OrderItem(menuAmericano, Collections.emptyMap(), 2));
-        Order order3 = new Order(103, "아무개", LocalDateTime.now().minusMinutes(2), OrderStatus.CANCELED, cart3);
+        cart3.addItem(new OrderItem(americano, Map.of(tempGroup, tempCold), 1));
+        cart3.addItem(new OrderItem(latte, Map.of(tempGroup, tempHot, syrupGroup, syrupVanilla), 1));
+        Order order3 = new Order(103, "박서준", LocalDateTime.now().minusMinutes(2), OrderStatus.PENDING, cart3);
 
-        Cart cart4 = new Cart();
-        cart4.addItem(new OrderItem(menuLatte, Collections.emptyMap(), 1));
-        Order order4 = new Order(104, "아무개", LocalDateTime.now(), OrderStatus.PENDING, cart4);
+        RegistryManager.OPTIONS.add(tempHot.id(), tempHot);
+        RegistryManager.OPTIONS.add(tempCold.id(), tempCold);
+        RegistryManager.OPTIONS.add(shot1.id(), shot1);
+        RegistryManager.OPTIONS.add(syrupVanilla.id(), syrupVanilla);
 
-        RegistryManager.OPTIONS.add(optRegular.id(), optRegular);
-        RegistryManager.OPTIONS.add(optLarge.id(), optLarge);
-        RegistryManager.OPTIONS.add(optAddShot.id(), optAddShot);
-        RegistryManager.OPTIONS.add(optVanilla.id(), optVanilla);
-        RegistryManager.OPTIONS.add(optHazelnut.id(), optHazelnut);
+        RegistryManager.OPTION_GROUPS.add(tempGroup.id(), tempGroup);
+        RegistryManager.OPTION_GROUPS.add(shotGroup.id(), shotGroup);
+        RegistryManager.OPTION_GROUPS.add(syrupGroup.id(), syrupGroup);
 
-        RegistryManager.OPTION_GROUPS.add(ogSize.id(), ogSize);
-        RegistryManager.OPTION_GROUPS.add(ogShot.id(), ogShot);
-        RegistryManager.OPTION_GROUPS.add(ogSyrup.id(), ogSyrup);
-        RegistryManager.MENUS.add(menuAmericano.id(), menuAmericano);
-        RegistryManager.MENUS.add(menuLatte.id(), menuLatte);
-        RegistryManager.CATEGORIES.add(cateCoffee.cateId(), cateCoffee);
+        RegistryManager.MENUS.add(americano.id(), americano);
+        RegistryManager.MENUS.add(latte.id(), latte);
+
+        RegistryManager.CATEGORIES.add(coffeeCategory.cateId(), coffeeCategory);
+
         RegistryManager.ORDERS.add(String.valueOf(order1.orderId()), order1);
         RegistryManager.ORDERS.add(String.valueOf(order2.orderId()), order2);
         RegistryManager.ORDERS.add(String.valueOf(order3.orderId()), order3);
-        RegistryManager.ORDERS.add(String.valueOf(order4.orderId()), order4);
     }
 }
